ingredients data is now stored in JSON file + loaded into the program and displayed on the list in My Ingredients section

--- a/src/main/resources/my_ingredients_view.fxml
+++ b/src/main/resources/my_ingredients_view.fxml
@@ -4,33 +4,21 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.solutions.sulmurz.nutricalc.controllers.MyIngredientsController">
+<BorderPane maxHeight="600.0" maxWidth="800.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.solutions.sulmurz.nutricalc.controllers.MyIngredientsController">
    <effect>
       <ColorAdjust brightness="-0.35" contrast="0.13" hue="0.46" saturation="0.24" />
    </effect>
-   <left>
-      <ScrollPane prefHeight="496.0" prefWidth="233.0" BorderPane.alignment="CENTER">
-         <content>
-            <ListView prefHeight="708.0" prefWidth="218.0" />
-         </content>
-      </ScrollPane>
-   </left>
-   <right>
-      <ScrollPane prefHeight="496.0" prefWidth="592.0" BorderPane.alignment="CENTER">
-         <content>
-            <TextArea editable="false" prefHeight="635.0" prefWidth="552.0" />
-         </content>
-      </ScrollPane>
-   </right>
    <bottom>
       <HBox prefHeight="72.0" prefWidth="800.0" BorderPane.alignment="CENTER">
          <children>
@@ -68,4 +56,51 @@
          </children>
       </Pane>
    </top>
+   <center>
+      <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="428.0" prefWidth="224.0" BorderPane.alignment="CENTER">
+         <children>
+            <ScrollPane prefHeight="496.0" prefWidth="233.0">
+               <content>
+                  <ListView fx:id="ingredientsListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onMouseClicked" prefHeight="596.0" prefWidth="217.0" />
+               </content>
+            </ScrollPane>
+            <AnchorPane prefHeight="717.0" prefWidth="569.0">
+               <children>
+                  <ScrollPane layoutX="-4.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <content>
+                      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="557.0">
+                           <children>
+                              <VBox prefHeight="650.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <Label fx:id="nameTextField" alignment="CENTER" prefHeight="35.0" prefWidth="1127.0" text="NAME" textAlignment="CENTER" visible="false" VBox.vgrow="ALWAYS">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                    </Label>
+                                    <VBox fx:id="macroAmountsVBox" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="644.0" prefWidth="443.0">
+                                       <children>
+                                          <TextField fx:id="macroTitle" alignment="CENTER" text="MACRO:" visible="false" />
+                                       </children>
+                                    </VBox>
+                                    <VBox fx:id="mineralsAmountsVBox" alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <TextField fx:id="mineralsTitle" alignment="CENTER" text="MINERALS:" visible="false" />
+                                       </children>
+                                    </VBox>
+                                    <VBox fx:id="vitaminsAmountsVBox" alignment="CENTER" prefHeight="305.0" prefWidth="567.0">
+                                       <children>
+                                          <TextField fx:id="vitaminsTitle" alignment="CENTER" text="VITAMINS:" visible="false" />
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </ScrollPane>
+               </children>
+            </AnchorPane>
+         </children>
+      </HBox>
+   </center>
 </BorderPane>
