--- a/src/main/resources/my_ingredients_view.fxml
+++ b/src/main/resources/my_ingredients_view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -24,7 +25,7 @@
          <children>
             <HBox alignment="CENTER" prefHeight="72.0" prefWidth="310.0" spacing="10.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="86.0" text="ADD" />
+                  <Button mnemonicParsing="false" onMouseClicked="#openAddIngredientView" prefHeight="35.0" prefWidth="86.0" text="ADD" />
                   <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="86.0" text="DELETE" />
                </children>
             </HBox>
@@ -61,38 +62,228 @@
          <children>
             <ScrollPane prefHeight="496.0" prefWidth="233.0">
                <content>
-                  <ListView fx:id="ingredientsListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onMouseClicked" prefHeight="596.0" prefWidth="217.0" />
+                  <ListView fx:id="ingredientsListView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#onListObjectSelected" prefHeight="596.0" prefWidth="217.0" />
                </content>
             </ScrollPane>
-            <AnchorPane prefHeight="717.0" prefWidth="569.0">
+            <AnchorPane prefHeight="717.0" prefWidth="575.0">
                <children>
                   <ScrollPane layoutX="-4.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <content>
                       <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="557.0">
                            <children>
-                              <VBox prefHeight="650.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <VBox fx:id="dataSection" prefHeight="562.0" prefWidth="562.0" visible="false">
                                  <children>
-                                    <Label fx:id="nameTextField" alignment="CENTER" prefHeight="35.0" prefWidth="1127.0" text="NAME" textAlignment="CENTER" visible="false" VBox.vgrow="ALWAYS">
+                                    <TextField fx:id="nameTextField" alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="476.0" text="NAME">
                                        <font>
-                                          <Font size="24.0" />
+                                          <Font size="20.0" />
                                        </font>
-                                    </Label>
-                                    <VBox fx:id="macroAmountsVBox" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="644.0" prefWidth="443.0">
+                                       <VBox.margin>
+                                          <Insets bottom="30.0" />
+                                       </VBox.margin>
+                                    </TextField>
+                                    <HBox prefHeight="494.0" prefWidth="0.0">
                                        <children>
-                                          <TextField fx:id="macroTitle" alignment="CENTER" text="MACRO:" visible="false" />
+                                          <VBox fx:id="macroSection" prefHeight="194.0" prefWidth="554.0">
+                                             <children>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="44.0" prefWidth="224.0" text="MACRO:">
+                                                   <font>
+                                                      <Font size="20.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                             </children>
+                                          </VBox>
+                                          <VBox fx:id="mineralsSection" prefHeight="194.0" prefWidth="560.0">
+                                             <children>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0" text="MINERALS:">
+                                                   <font>
+                                                      <Font size="20.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                             </children>
+                                          </VBox>
+                                          <VBox fx:id="vitaminsSection" prefHeight="194.0" prefWidth="569.0">
+                                             <children>
+                                                <TextField fx:id="vitaminsLabel" alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0" text="VITAMINS:">
+                                                   <font>
+                                                      <Font size="20.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                                <TextField alignment="CENTER" editable="false" prefHeight="25.0" prefWidth="354.0">
+                                                   <font>
+                                                      <Font size="14.0" />
+                                                   </font>
+                                                </TextField>
+                                             </children>
+                                          </VBox>
                                        </children>
-                                    </VBox>
-                                    <VBox fx:id="mineralsAmountsVBox" alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <TextField fx:id="mineralsTitle" alignment="CENTER" text="MINERALS:" visible="false" />
-                                       </children>
-                                    </VBox>
-                                    <VBox fx:id="vitaminsAmountsVBox" alignment="CENTER" prefHeight="305.0" prefWidth="567.0">
-                                       <children>
-                                          <TextField fx:id="vitaminsTitle" alignment="CENTER" text="VITAMINS:" visible="false" />
-                                       </children>
-                                    </VBox>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </HBox>
                                  </children>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
                               </VBox>
                            </children>
                         </AnchorPane>
