--- a/src/main/resources/my_ingredients_view.fxml
+++ b/src/main/resources/my_ingredients_view.fxml
@@ -26,7 +26,7 @@
             <HBox alignment="CENTER" prefHeight="72.0" prefWidth="310.0" spacing="10.0">
                <children>
                   <Button mnemonicParsing="false" onMouseClicked="#openAddIngredientView" prefHeight="35.0" prefWidth="86.0" text="ADD" />
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="86.0" text="DELETE" />
+                  <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#onDeleteClick" prefHeight="35.0" prefWidth="86.0" text="DELETE" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="72.0" prefWidth="672.0" spacing="100.0">
